--- a/about.html
+++ b/about.html
@@ -17,10 +17,10 @@
     <div class="container-fluid text-white" style="background-color: #06a575;">
         <div class="row justify-content-between">
           <div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 p-2 text-start">
-            <i class="fa fa-envelope icontop"></i>priyaminternationalhotel@gmail.com
+            <i class="fa fa-envelope icontop"></i>priyamhotel@gmail.com
           </div>
           <div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 p-2 text-end top-phone">
-            <i class="fa fa-phone icontop"></i>+91 9648080625, 9682270625
+            <i class="fa fa-phone icontop"></i>+919999999999, 8888888888
           </div>
         </div>
     </div>
