--- a/contact.html
+++ b/contact.html
@@ -86,8 +86,8 @@
               <div class="col-sm-5">
                 <p>Contact us and we'll get back to you within 24 hours.</p>
                 <p><span class="fa fa-map-marker"></span> Civil lines, Golghar, Gorakhpur</p>
-                <p><span class="fa fa-phone"></span> +91 9682270625, 9648080625 </p>
-                <p><span class="fa fa-envelope"></span> priyaminternationalhotel@gmail.com</p>
+                <p><span class="fa fa-phone"></span> +91 9999999999, 8888888888 </p>
+                <p><span class="fa fa-envelope"></span> priyamhotel@gmail.com</p>
             </div>
             <div class="col-sm-7 slideanim">
               <div class="row">
