--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <div class="container-fluid text-white" style="background-color: #06a575;">
         <div class="row justify-content-between">
           <div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 p-2 text-start">
-            <i class="fa fa-envelope icontop"></i>priyaminternationalhotel@gmail.com
+            <i class="fa fa-envelope icontop"></i>priyamhotel@gmail.com
           </div>
           <div class="col-lg-4 col-md-6 col-sm-6 col-xs-6 p-2 text-end top-phone">
-            <i class="fa fa-phone icontop"></i>+91 9648080625, 9682270625
+            <i class="fa fa-phone icontop"></i>+91 9999999999, 8888888888
           </div>
         </div>
     </div>
@@ -64,7 +64,7 @@
 
     <div class="container-fluid">
         <div class="row pt-1">
-            <div class="topmarquee"><marquee>Priyam International Hotel | Civil lines, Golghar, Gorakhpur | Contact - +91 9682270625, interpriyam@gmail.com</marquee></div>
+            <div class="topmarquee"><marquee>Priyam International Hotel | Civil lines, Golghar, Gorakhpur | Contact - +91 999999999, priyamhotel@gmail.com</marquee></div>
         </div>
     </div>
 
@@ -455,8 +455,8 @@
             <div class="col-sm-5">
               <p>Contact us and we'll get back to you within 24 hours.</p>
               <p><span class="fa fa-map-marker"></span> Civil lines, Golghar, Gorakhpur</p>
-              <p><span class="fa fa-phone"></span> +91 9682270625, 9648080625 </p>
-              <p><span class="fa fa-envelope"></span> priyaminternationalhotel@gmail.com</p>
+              <p><span class="fa fa-phone"></span> +91 9999999999, 8888888888 </p>
+              <p><span class="fa fa-envelope"></span> priyamhotel@gmail.com</p>
           </div>
           <div class="col-sm-7 slideanim">
             <div class="row">
